--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <meta name="theme-color" content="#1976d2">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <meta name="description" content="Site TP2">
 </head>
 <body>
   <app-root></app-root>
